FIX: IE11 / Win 7 Array.prototype.find polyfixed; FB-comments link truncated

--- a/src/_app/styles/typography.scss
+++ b/src/_app/styles/typography.scss
@@ -47,3 +47,11 @@
   background-color: $orange;
   color: #ffffff;
 }
+
+.text-truncate{
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+}
